# BitNet

./: COMPRESSION_RESEARCH_REPORT.md  README.md  setup_qwen35_9b.py
analysis/: PRODUCTION_12X_BENCHMARK.md  QWEN_COMBINED_COMPRESSION_RESULTS.md  QWEN_COMPRESSION_THEORY.md  QWEN_KV_COMPRESSION_SETUP.md  RED_TEAM_MATH.md  RED_TEAM_SETUP.md
experiments/: ab_benchmark.py  production_12x_benchmark.py  qwen25_combined_compression.py  qwen35_9b_combined_compression.py  qwen_combined_compression.py
experiments/results/: production_12x_results.json  qwen25_combined_results.json  qwen35_9b_combined_results.json  qwen_combined_results.json
tools/: .gitignore  KV_VERIFICATION_REPORT.json  LICENSE  NEXT_TOOLS_PROPOSAL.md  README.md  TEST_REPORT.md  TEST_REPORT_FINAL.md  TEST_REPORT_QWEN.md  pyproject.toml  qwen_test_results.json  run_qwen_tests.py
tools/bitnet_tools/: __init__.py  config.py  engine.py
tools/bitnet_tools/cli/: __init__.py  assert_cmd.py  changelog.py  classify.py  commit.py  cron.py  env.py  explain.py  extract.py  gitignore.py  jsonify.py  mock.py  namegen.py  regex.py  rewrite.py  sql.py  summarize.py  tldr.py
tools/hone_tools/: __init__.py  config.py  engine.py
tools/hone_tools/cli/: assert_cmd.py  changelog.py  classify.py  commit.py  cron.py  env.py  explain.py  extract.py  gitignore.py  hone_cmd.py  jsonify.py  mock.py  namegen.py  regex.py  rewrite.py  sql.py  summarize.py  tldr.py
tools/tests/: test_assert.py  test_changelog.py  test_commit.py  test_cron.py  test_env.py  test_explain.py  test_gitignore.py  test_mock.py  test_regex.py  test_sql.py
webui/: README.md  index.html  launch.py  presets.json
webui/backend/: __main__.py  app.py  config.py  eviction_server.py  mcp_client.py  providers.py  requirements.txt  tools.py
