[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hone-cli"
version = "0.1.0"
description = "17 CLI tools powered by local AI inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SCJedi", email = "starcraft.jedi@gmail.com"}
]
keywords = ["llm", "cli", "tools", "local-ai", "llama-cpp", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/SCJedi/hone-cli"
Repository = "https://github.com/SCJedi/hone-cli"

[project.scripts]
hone = "hone_tools.cli.hone_cmd:main"
hone-classify = "hone_tools.cli.classify:main"
hone-extract = "hone_tools.cli.extract:main"
hone-summarize = "hone_tools.cli.summarize:main"
hone-jsonify = "hone_tools.cli.jsonify:main"
hone-rewrite = "hone_tools.cli.rewrite:main"
hone-tldr = "hone_tools.cli.tldr:main"
hone-namegen = "hone_tools.cli.namegen:main"
hone-commit = "hone_tools.cli.commit:main"
hone-regex = "hone_tools.cli.regex:main"
hone-cron = "hone_tools.cli.cron:main"
hone-sql = "hone_tools.cli.sql:main"
hone-explain = "hone_tools.cli.explain:main"
hone-assert = "hone_tools.cli.assert_cmd:main"
hone-changelog = "hone_tools.cli.changelog:main"
hone-env = "hone_tools.cli.env:main"
hone-mock = "hone_tools.cli.mock:main"
hone-gitignore = "hone_tools.cli.gitignore:main"
